--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "element-ui": "^2.15.14",
     "less-loader": "^12.2.0",
     "vue": "^2.6.14",
@@ -23,5 +24,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "type": "module"
 }
